первый коммит в ветке header-1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="header">
         <h1 class="title">Hello World</h1>
-        <p class="subtitle">231180</p>
+        <h2 class="subtitle">Проверка хедера</h2>
+        <p class="subtitle__name">231180</p>
     </div>
 </body>
 
